Fix talks alignment

--- a/app/css/_talks.scss
+++ b/app/css/_talks.scss
@@ -33,6 +33,7 @@
   }
 
   &__item {
+    align-items: center;
     display: flex;
     justify-content: space-between;
   }
